[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/ccc-eth-lock",
  "contracts/ccc-btc-lock",
  "crates/ckb-lock-helper"
]

[profile.release]
overflow-checks = true
opt-level = 3
panic = 'abort'
strip = true
lto = true

[profile.dev]
strip = true
opt-level = 1
debug = false
panic = 'abort'
debug-assertions = true
