[workspace]
resolver = "2"
members = []

[package]
name = "ccc-lock-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
blake2b-ref = "0.3.1"
ckb-chain-spec = "0.116.0"
ckb-crypto = "0.116.0"
ckb-error = "0.116.0"
ckb-jsonrpc-types = "0.116.0"
ckb-script = "0.116.0"
ckb-traits = "0.116.0"
ckb-types = "0.116.0"
ed25519-dalek = "2.1.1"
hex = "0.4"
k256 = "0.13.1"
ripemd = "0.1.3"
serde_json = "1.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
