[package]
name = "ccc-btc-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.15"
ckb-lock-helper = { path = "../../crates/ckb-lock-helper" }
secp256k1 = { git = "https://github.com/libraries/rust-secp256k1", branch = "musl", default-features = false, features = ["recovery", "lowmemory"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
