[package]
name = "ckb-lock-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.15", features = ["allocator", "ckb-types", "calc-hash"]}
hex = { version = "0.4", default-features = false, features = ["alloc"]}
blake2b-ref = "0.3.1"
